<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  

  <groupId>io.crums</groupId>
  <artifactId>ledgers</artifactId>
  <version>${revision}</version>

  <packaging>pom</packaging>

  <name>Ledgers (Root POM)</name>
  
  <properties>
    <revision>0.5.0-SNAPSHOT</revision>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
    <flatten.version>1.2.2</flatten.version>
    <crums.core>1.0.0-SNAPSHOT</crums.core>
  </properties>
  
  <modules>
    <module>skipledger</module>
    <module>skipledger-sql</module>
    <module>reports</module>
    <module>sldg</module>
    <module>mrsl</module>
  </modules>
  


  <build>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.plugin}</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- w/o plugin below, sub modules don't inherit $revision string -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>${flatten.version}</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>

  </build>


  <dependencies>

    <dependency>
      <groupId>io.crums</groupId>
      <artifactId>crums-core</artifactId>
      <version>${crums.core}</version>
    </dependency>


    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>com.gnahraf</groupId>
      <artifactId>junit-io</artifactId>
      <version>0.0.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

</project>